--- a/index.html
+++ b/index.html
@@ -3,65 +3,11 @@ layout: base
 title: El indultometro
 ---
 
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8] -->
-<html lang="en">
-  <!-- <![endif] -->
-  <head>
-  <meta charset="utf-8" />
-  <!-- %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"} -->
-  <title></title>
-  <meta content="Bootsrap based theme" name="description" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <link href="favicon.ico" rel="shortcut icon" />
-<link href="images/apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114" />
-<link href="images/apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72" />
-<link href="images/apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon-precomposed" />
-  <link href="stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
-</head>
-  <body class="theme-pattern-concrete-wall">
-    <!-- Page Header -->
-    <header id="masthead">
-      <nav class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <h1 class="brand">
-              <a href="index.html">
-                El indultómetro
-                <i class="icon-beaker"></i>
-              </a>
-            </h1>
-            <div class="nav-collapse collapse">
-              <ul class="nav pull-right">
-                <li class="active"><a href="index.html">Inicio</a></li>
-                <li class=""><a href="indultos.html">10.000 indultos</a></li>
-                <li class=""><a href="blog.html">Los más sonados</a></li>
-                <li class=""><a href="blog.html">Noticias</a></li>
-                <li class=""><a href="contact.html">¿Qué es esto?</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <!-- Main Content -->
-    <div id="content" role="main">
-      <section class="section alt" id="promo">
+{% include header.html %}
+
+<!-- Main Content -->
+<div id="content" role="main">
+<section class="section alt" id="promo">
   <div class="container" style="height:500px">
     <div class="carousel slide" id="myCarousel">
       <!-- Carousel items -->
@@ -77,41 +23,7 @@ title: El indultometro
             <div class="span5">
               <img alt="imac" class="pull-right" src="images/assets/imac.png" />
             </div>
-          </div>
-
-<!--           <div class="row-fluid">
-            <div class="span4">
-              <div class="well">
-                <h3>
-                  Strategy & consulting
-                </h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                </p>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="well">
-                <h3>
-                  Web design
-                </h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                </p>
-              </div>
-            </div>
-            <div class="span4">
-              <div class="well">
-                <h3>
-                  Content Strategy
-                </h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                </p>
-              </div>
-            </div>
-          </div>
- -->          
+          </div>      
         </div>
         <div class="item">
           <div class="row-fluid">
@@ -257,69 +169,5 @@ title: El indultometro
     </div>
   </div>
 </section>
-    </div>
-    <!-- Page Footer -->
-    <footer class="section" id="footer" role="contentinfo">
-      <div class="container">
-        <div class="row-fluid">
-          <div class="span4">
-            <h3>Contacta con nosotros</h3>
-            <p>
-              La Fundación Ciudadana Civio es una organización sin ánimo de lucro...
-            </p>
-            <ul class="icons">
-              <li>
-                <i class="icon-envelope"></i>
-                <a href="mailto:contacto@civio.es">contacto@civio.es</a>
-              </li>
-              <li>
-                <i class="icon-twitter"></i>
-                <a href="http://twitter.com/civio/" target="_blank">@civio</a>
-              </li>
-              <li>
-                <i class="icon-facebook"></i>
-                <a href="http://facebook.com/fundacioncivio" target="_blank">Civio</a>
-              </li>
-            </ul>
-          </div>
-          <div class="span4">
-            <h3>El indultómetro</h3>
-            <p>
-              Un proyecto de @dcabo y @jjelosua para Civio... Pilla el código aquí...
-            </p>
-            </ul>
-          </div>
-          <div class="span4">
-            <h3>Noticias</h3>
-            <ul class="unstyled">
-              {% for post in site.posts limit:3 %}
-              <li>
-                <h4>
-                  <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-                </h4>
-                <p>
-                  <small>{{ post.date | localize: "%d de %B de %Y" }}</small>
-                </p>
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src="javascripts/jquery.min.js" type="text/javascript"></script>
-    <script src="javascripts/bootstrap.js" type="text/javascript"></script>
-    <script src="javascripts/script.js" type="text/javascript"></script>
-  <script type="text/javascript">
-if (typeof gaJsHost == 'undefined') {
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-}
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("#########");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
-</html>
+</div>
+{% include footer.html %}
