--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: El indultometro
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
-  <div class="container" style="height:500px">
+  <div class="container" >
     <div class="carousel slide" id="myCarousel">
       <!-- Carousel items -->
       <div class="carousel-inner">
@@ -63,7 +63,7 @@ title: El indultometro
     </div>
     <ul class="thumbnails bordered thumbnail-list">
       <li class="span4">
-        <a href="about.html">
+        <a href="indultos.html">
           <figure class="thumbnail-figure">
             <img alt="sdfgsdfg " src="images/assets/people1-600x400.jpeg" />
             <figcaption class="thumbnail-title">
@@ -81,7 +81,7 @@ title: El indultometro
         </p>
       </li>
       <li class="span4">
-        <a href="about.html">
+        <a href="famosos.html">
           <figure class="thumbnail-figure">
             <img alt="" src="images/assets/people6-600x400.jpeg" />
             <figcaption class="thumbnail-title">
