--- a/web/indultos.html
+++ b/web/indultos.html
@@ -57,7 +57,7 @@ subtitle: This is the lead
 <script> 
   $(document).ready(function() {
     $.ajax({
-      url: '/api/callback=?',
+      url: '/api/?callback=?',
       dataType: "jsonp",
       jsonpCallback: "onLoad",
       cache: true
