--- a/web/indultos.html
+++ b/web/indultos.html
@@ -32,6 +32,8 @@ subtitle: This is the lead
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <div class="row-fluid">
+            <div class="span10 offset1" id="summary-viz">
+            </div>
             <div class="span10 offset1">
               <table class="table table-bordered table-striped" id="indultos">
                 <thead>
@@ -59,8 +61,86 @@ subtitle: This is the lead
   // http://samsaffron.com/archive/2012/02/17/stop-paying-your-jquery-tax
   window.q=[];window.$=function(f){q.push(f)}
 </script>
+
+
+<!-- // FIXME: Move this to separate file -->
+<style>
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: steelblue;
+}
+
+.x.axis path {
+  display: none;
+}
+</style>
 <script> 
   $(function() {
+    // FIXME: Move this to separate file
+    var margin = {top: 20, right: 20, bottom: 30, left: 60},
+        width = 800 - margin.left - margin.right,
+        height = 300 - margin.top - margin.bottom;
+
+    var x = d3.scale.ordinal()
+        .rangeRoundBands([0, width], .1);
+
+    var y = d3.scale.linear()
+        .range([height, 0]);
+
+    var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom");
+
+    var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient("left");
+
+    var svg = d3.select("#summary-viz").append("svg")
+        .attr("width", '100%')
+        .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    d3.json("/api/summary", function(error, data) {
+      if (error) return console.warn(error);
+
+      x.domain(data.map(function(d) { return d.year; }));
+      y.domain([0, d3.max(data, function(d) { return d.count; })]);
+
+      svg.append("g")
+          .attr("class", "x axis")
+          .attr("transform", "translate(0," + height + ")")
+          .call(xAxis);
+
+      svg.append("g")
+          .attr("class", "y axis")
+          .call(yAxis)
+        .append("text")
+          .attr("transform", "rotate(-90)")
+          .attr("y", 6)
+          .attr("dy", ".71em")
+          .style("text-anchor", "end")
+          .text("Indultos");
+
+      svg.selectAll(".bar")
+          .data(data)
+        .enter().append("rect")
+          .attr("class", "bar")
+          .attr("x", function(d) { return x(d.year); })
+          .attr("width", x.rangeBand())
+          .attr("y", function(d) { return y(d.count); })
+          .attr("height", function(d) { return height - y(d.count); });
+    });
+
+
+
+
     $.ajax({
       url: '/api/pardons?callback=?',
       dataType: "jsonp",
