--- a/web/indultos.html
+++ b/web/indultos.html
@@ -32,6 +32,7 @@ subtitle: This is the lead
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <div class="row-fluid">
+            <!-- FIXME: Add search -->
             <div class="span10 offset1" id="summary-viz">
             </div>
             <div class="span10 offset1">
@@ -39,21 +40,23 @@ subtitle: This is the lead
                 Haz click para verlos en detalle.</p>
             </div>
             <div class="span10 offset1">
-              <table class="table table-bordered table-striped" id="indultos">
-                <thead>
-                  <tr>
-                    <th>Id</th>
-                    <th>Año</th>
-                    <th>Rol</th>
-                    <th>Delito</th>
-                    <!-- FIXME: Add link to BOE -->
-                    <!-- FIXME: Add link to detail page -->
-                  </tr>
-                </thead>
-                <tbody>
+              <small>
+                <table class="table table-bordered table-striped" id="indultos">
+                  <thead>
+                    <tr>
+                      <th>Id</th>
+                      <th>Año</th>
+                      <th>Rol</th>
+                      <th>Delito</th>
+                      <!-- FIXME: Add link to BOE -->
+                      <!-- FIXME: Add link to detail page -->
+                    </tr>
+                  </thead>
+                  <tbody>
 
-                </tbody>
-              </table>
+                  </tbody>
+                </table>
+              </small>
             </div>
           </div>
         </article>
