Fix nav bar highlights

--- a/web/famosos.html
+++ b/web/famosos.html
@@ -1,6 +1,7 @@
 ---
 title: Indultos famosos
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
+nav_section: main_pardons
 ---
 
 {% include header.html %}
