--- a/web/indultos.html
+++ b/web/indultos.html
@@ -1,6 +1,7 @@
 ---
 title: 10.000 indultos
 subtitle: This is the lead
+nav_section: all_pardons
 ---
 
 {% include header.html %}
@@ -50,9 +51,10 @@ subtitle: This is the lead
                   <thead>
                     <tr>
                       <th>Id</th>
-                      <th>Año</th>
+                      <th>Fecha</th>
                       <th>Rol</th>
                       <th>Delito</th>
+                      <!-- FIXME: Quito Rol, -->
                       <!-- FIXME: Add link to BOE -->
                       <!-- FIXME: Add link to detail page -->
                     </tr>
