--- a/web/ayuda.html
+++ b/web/ayuda.html
@@ -1,6 +1,7 @@
 ---
 title: ¿Qué es esto?
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
+nav_section: help
 ---
 
 {% include header.html %}
