Minor copy edits

--- a/web/famosos.html
+++ b/web/famosos.html
@@ -1,5 +1,5 @@
 ---
-title: Indultos famosos
+title: Indultos destacados
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 nav_section: main_pardons
 ---
@@ -28,7 +28,7 @@ nav_section: main_pardons
       </div>
       <div class="span9">
         <h1>
-          Los indultos más famosos
+          Indultos destacados
         </h1>
         <p class="lead">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
