--- a/web/indultos.html
+++ b/web/indultos.html
@@ -54,6 +54,7 @@ nav_section: all_pardons
                       <th>Fecha</th>
                       <th>Rol</th>
                       <th>Delito</th>
+                      <th></th>
                       <!-- FIXME: Quito Rol, -->
                       <!-- FIXME: Add link to BOE -->
                       <!-- FIXME: Add link to detail page -->
@@ -105,11 +106,11 @@ nav_section: all_pardons
       var fragments = [];
       $.each(data, function(key, pardon) {
         fragments.push('<tr>');
-        $.each(['id', 'pardon_date', 'role', 'crime'], function(i, field_name) {
-          fragments.push('<td>');
-          fragments.push(pardon[field_name]);
-          fragments.push('</td>');
-        });
+        fragments.push('<td><a href="http://www.boe.es/diario_boe/txt.php?id='+pardon['id']+'">'+pardon['id']+'</td>')
+        fragments.push('<td>'+pardon['pardon_date']+'</td>')
+        fragments.push('<td>'+pardon['role']+'</td>')
+        fragments.push('<td>'+pardon['crime']+'</td>')
+        fragments.push('<td><a href="/indulto.html?id='+pardon['id']+'">&rarr;</td>')
         fragments.push('</tr>');
       });
       $(fragments.join('')).appendTo('#indultos tbody');
