--- a/web/indulto.html
+++ b/web/indulto.html
@@ -25,7 +25,6 @@ nav_section: all_pardons
             </h2>
           </header>
           <div class="row-fluid">
-            </div>
             <div class="span10 offset1">
               <small>
                 <table class="table table-bordered table-striped" id="indultos">
@@ -33,6 +32,11 @@ nav_section: all_pardons
                   </tbody>
                 </table>
               </small>
+            </div>
+          </div>
+          <div class="row-fluid">
+            <div class="span10 offset1">
+              {% include disqus.html %}
             </div>
           </div>
         </article>
