Make table sortable

--- a/web/indultos.html
+++ b/web/indultos.html
@@ -51,10 +51,10 @@ nav_section: all_pardons
                   <thead>
                     <tr>
                       <th data-class="expand">Id</th>
-                      <th>Fecha</th>
+                      <th data-sort-initial="true">Fecha</th>
                       <th data-hide="phone">Rol</th>
                       <th data-hide="phone">Delito</th>
-                      <th></th>
+                      <th data-sort-ignore="true"></th>
                       <!-- FIXME: Cambiar los campos: quitar rol... -->
                     </tr>
                   </thead>
