--- a/web/indultos.html
+++ b/web/indultos.html
@@ -34,9 +34,9 @@ nav_section: all_pardons
           </p>
           <div class="row-fluid">
             <div class="span10 offset1">
-              <form class="pull-left" id="search-form">
-                <input type="text" class="span7" id="search-form-query">
-                <button type="submit" class="btn">Buscar</button>
+              <form id="search-form">
+                <input type="text" class="span6" id="search-form-query">
+                <button type="submit" class="btn">Buscar delito</button>
               </form>
             </div>
             <div id="pop-up">
