Added header to detail pardon info

--- a/web/indultos.html
+++ b/web/indultos.html
@@ -41,7 +41,7 @@ nav_section: all_pardons
             </div>
             <div id="pop-up">
               <div id="pop-up-title"></div>
-              <div id="pop-up-content">Haga click para verlos en detalle</div>
+              <div id="pop-up-content">Haz click para verlos en detalle</div>
             </div>
             <div class="span10 offset1" id="summary-viz">
             </div>
@@ -54,7 +54,7 @@ nav_section: all_pardons
                       <th data-sort-initial="true">Fecha</th>
                       <th data-hide="phone">Rol</th>
                       <th data-hide="phone">Delito</th>
-                      <th data-sort-ignore="true"></th>
+                      <th data-sort-ignore="true">Detalle</th>
                       <!-- FIXME: Cambiar los campos: quitar rol... -->
                     </tr>
                   </thead>
