--- a/web/indultos.html
+++ b/web/indultos.html
@@ -1,6 +1,5 @@
 ---
-title: 10.000 indultos
-subtitle: This is the lead
+title: Más de 10.000 indultos
 nav_section: all_pardons
 ---
 
@@ -19,33 +18,26 @@ nav_section: all_pardons
     <div class="row-fluid">
       <div class="span12">
         <article class="blog-post">
-          <header class="blog-header">
-            <h2>
-              {{ page.subtitle }}
-            </h2>
-          </header>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
           <div class="row-fluid">
             <div class="span10 offset1">
+              <p>
+                Loremss ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
               <form id="search-form">
                 <input type="text" class="span6" id="search-form-query">
                 <button type="submit" class="btn">Buscar delito</button>
               </form>
-            </div>
-            <div id="pop-up">
-              <div id="pop-up-title"></div>
-              <div id="pop-up-content">Haz click para verlos en detalle</div>
-            </div>
-            <div class="span10 offset1" id="summary-viz">
-            </div>
-            <div class="span10 offset1">
+              <div id="pop-up">
+                <div id="pop-up-title"></div>
+                <div id="pop-up-content">Haz click para verlos en detalle</div>
+              </div>
+              <div id="summary-viz">
+              </div>
               <small>
                 <table class="table table-bordered table-striped footable" id="indultos">
                   <thead>
