--- a/web/indultos.html
+++ b/web/indultos.html
@@ -16,47 +16,53 @@ nav_section: all_pardons
 <section class="section">
   <div class="container">
     <div class="row-fluid">
-      <div class="span12">
-        <article class="blog-post">
-          <div class="row-fluid">
-            <div class="span10 offset1">
-              <p>
-                Loremss ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
-              <form id="search-form">
-                <input type="text" class="span6" id="search-form-query" style="margin-bottom: 0px;">
-                <button type="submit" class="btn">Buscar delito</button>
-              </form>
-              <div id="pop-up">
-                <div id="pop-up-title"></div>
-                <div id="pop-up-content">Haz click para verlos en detalle</div>
-              </div>
-              <div id="summary-viz">
-              </div>
-              <small>
-                <table class="table table-bordered table-striped footable" id="indultos">
-                  <thead>
-                    <tr>
-                      <th data-class="expand" data-sort-ignore="true">Detalle</th>
-                      <th data-sort-initial="true">Fecha</th>
-                      <th data-hide="phone">Tipo</th>
-                      <th data-hide="phone">Delito</th>
-                      <th data-sort-ignore="true">BOE</th>
-                    </tr>
-                  </thead>
-                  <tbody>
+      <div class="span10 offset1">
+        <p>
+          Loremss ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-                  </tbody>
-                </table>
-              </small>
-            </div>
+        <ul class="nav nav-pills">
+          <li class="active"><a href="#by_year" data-toggle="pill">Buscar por año</a></li>
+          <li><a href="#full_text" data-toggle="pill">Búsqueda libre</a></li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="by_year">
+            <div id="summary-viz"></div>
           </div>
-        </article>
+
+          <div class="tab-pane" id="full_text">
+            <form id="search-form">
+              <input type="text" class="span6" id="search-form-query" style="margin-bottom: 0px;">
+              <button type="submit" class="btn">Buscar delito</button>
+            </form>
+          </div>
+        </div>
+
+        <div id="pop-up">
+          <div id="pop-up-title"></div>
+          <div id="pop-up-content">Haz click para verlos en detalle</div>
+        </div>
+        <small>
+          <table class="table table-bordered table-striped footable" id="indultos">
+            <thead>
+              <tr>
+                <th data-class="expand" data-sort-ignore="true">Detalle</th>
+                <th data-sort-initial="true">Fecha</th>
+                <th data-hide="phone">Tipo</th>
+                <th data-hide="phone">Delito</th>
+                <th data-sort-ignore="true">BOE</th>
+              </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+          </table>
+        </small>
       </div>
     </div>
   </div>
