--- a/web/indultos.html
+++ b/web/indultos.html
@@ -32,9 +32,7 @@ nav_section: all_pardons
         </ul>
         <div class="tab-content">
           <div class="tab-pane active" id="by_year">
-            <div id="summary-viz"></div>
           </div>
-
           <div class="tab-pane" id="full_text">
             <form id="search-form">
               <input type="text" class="span6" id="search-form-query" style="margin-bottom: 0px;">
@@ -42,6 +40,7 @@ nav_section: all_pardons
             </form>
           </div>
         </div>
+        <div id="histogram"></div>
 
         <div id="pop-up">
           <div id="pop-up-title"></div>
@@ -59,7 +58,6 @@ nav_section: all_pardons
               </tr>
             </thead>
             <tbody>
-
             </tbody>
           </table>
         </small>
@@ -73,6 +71,7 @@ nav_section: all_pardons
   // http://samsaffron.com/archive/2012/02/17/stop-paying-your-jquery-tax
   window.q=[];window.$=function(f){q.push(f)}
 </script>
+<script src="/javascripts/histogram.js" type="text/javascript"></script>
 <script src="/javascripts/pardons.js" type="text/javascript"></script>
 
 {% include footer.html %}
