--- a/web/indultos.html
+++ b/web/indultos.html
@@ -27,11 +27,12 @@ nav_section: all_pardons
         </p>
 
         <ul class="nav nav-pills">
-          <li class="active"><a href="#by_year" data-toggle="pill">Buscar por año</a></li>
-          <li><a href="#full_text" data-toggle="pill">Búsqueda libre</a></li>
+          <li class="active"><a id="by_year_pill" href="#by_year" data-toggle="pill">Buscar por año</a></li>
+          <li><a id="full_text_pill" href="#full_text" data-toggle="pill">Búsqueda libre</a></li>
         </ul>
         <div class="tab-content">
           <div class="tab-pane active" id="by_year">
+            <p>Pincha en cualquier barra para ver todos los indultos de ese año</p>
           </div>
           <div class="tab-pane" id="full_text">
             <form id="search-form">
