Fixed typo on methodology

--- a/web/metodologia.html
+++ b/web/metodologia.html
@@ -46,7 +46,7 @@ nav_section: method
                   el año 1996 en un formato HTML. En este <a href="http://www.boe.es/buscar/doc.php?id=BOE-A-2008-12344" target="_blank">ejemplo</a> podéis ver una disposición en la que se convocan unas pruebas selectivas
                    para el Cuerpo Superior de Técnicos de Instituciones Penintenciarias. 
                   </p>
-                  <small><em>Nota tecnológica:</em> Hemos utilizado Ruby para realizar esta descarga automatizada de las disposiciones</small>
+                  <small><em>Nota tecnológica:</em> Hemos utilizado <em>Ruby</em> para realizar esta descarga automatizada de las disposiciones</small>
                 </div>
               </div>
             </div>
