Add sharing buttons

--- a/web/indultos.html
+++ b/web/indultos.html
@@ -28,6 +28,8 @@ nav_section: all_pardons
         <p class="well well-small">
           Origen de los documentos: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. <a href="metodologia.html">(Más información)</a>
         </p>
+        {% include sharing.html %}
+
         <ul class="nav nav-pills">
           <li class="active"><a href="#by_year" data-toggle="pill">Buscar por año</a></li>
           <li><a href="#full_text" data-toggle="pill">Búsqueda libre</a></li>
