Work on copy and links, and add blank API page

--- a/web/ayuda.html
+++ b/web/ayuda.html
@@ -111,7 +111,7 @@ nav_section: help
         <div class="sidebar-widget">
           <h2 class="sidebar-header">¿Algo más?</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+            Si aún tienes alguna duda o quieres hacernos llegar algún comentario, escríbenos y te responderemos lo antes posible. 
           </p>
           <a href="mailto:contacto@civio.es" class="btn btn-primary">Mándanos un correo</a>
         </div>
