--- a/web/metodologia.html
+++ b/web/metodologia.html
@@ -1,7 +1,6 @@
 ---
 title: ¿Cómo se hizo?
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
-nav_section: method
 ---
 
 {% include header.html %}
@@ -254,8 +253,7 @@ nav_section: method
         <div class="sidebar-widget">
           <h2 class="sidebar-header">¿Tienes alguna duda?</h2>
           <p>
-            Si después de leer esta descripción de la metodología, tienes alguna duda o algún comentario que quieras hacernos llegar
-            aquí te dejamos nuestro contacto, intentaremos responderte lo antes que podamos.
+            Si aún tienes alguna duda o quieres hacernos llegar algún comentario, escríbenos y te responderemos lo antes posible. 
           </p>
           <a href="mailto:contacto@civio.es" class="btn btn-primary">Mándanos un correo</a>
         </div>
