--- a/web/indultos.html
+++ b/web/indultos.html
@@ -25,9 +25,9 @@ nav_section: all_pardons
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <p class="well well-small">
+        <p><small>
           Origen de los documentos: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. <a href="metodologia.html">(Más información)</a>
-        </p>
+        </small></p>
         {% include sharing.html %}
 
         <div class="well">
