--- a/web/indultos.html
+++ b/web/indultos.html
@@ -26,7 +26,7 @@ nav_section: all_pardons
           proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <p><small>
-          Origen de los documentos: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. <a href="metodologia.html">(Más información)</a>
+          Fuente: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. Datos actualizados a 7 de Febrero de 2013. <a href="metodologia.html">(Más información)</a>
         </small></p>
         {% include sharing.html %}
 
@@ -60,11 +60,12 @@ nav_section: all_pardons
           </form>
         </div>
 
-        <div id="histogram"></div>
-
-        <div>
-          <p>Pincha en cualquier barra para ver todos los indultos de ese año</p>
+        <div class="alert alert-info alert-block fade in">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <p>Pincha en cualquier barra para ver todos los indultos de ese año. También puedes filtrar los resultados por palabra o categoría.</p>
         </div>
+
+        <div id="histogram"></div>
 
         <div id="pop-up">
           <div id="pop-up-title"></div>
