Fix frontpage copy

--- a/web/index.html
+++ b/web/index.html
@@ -67,8 +67,8 @@ title: El indultometro
   <div class="container">
     <div class="page-header">
       <h1>
-        ¿Cual es el problema?
-        <small>Descubre cómo funcionan los indultos, y explora los datos históricos</small>
+        A Fondo
+        <small>Aprende cómo funcionan los indultos y explora los datos históricos</small>
       </h1>
     </div>
     <ul class="thumbnails bordered thumbnail-list">
