Fix copy in search page

--- a/web/indultos.html
+++ b/web/indultos.html
@@ -18,15 +18,10 @@ nav_section: all_pardons
     <div class="row-fluid">
       <div class="span10 offset1">
         <p>
-          Loremss ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Hemos <a href="/metodologia.html">recopilado, desgranado y clasificado toda la información contenida en el BOE</a> sobre los indultos concedidos en España desde 1996. Puedes buscar por tipo de delito, comparar los datos anuales y valorar el uso que los distintos gobiernos han hecho de esta prerrogativa. En definitiva, te invitamos a escarbar entre los datos.
         </p>
         <p><small>
-          Fuente: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. Datos actualizados a 7 de Febrero de 2013. <a href="metodologia.html">(Más información)</a>
+          Fuente: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. Datos actualizados a 7 de Febrero de 2013.
         </small></p>
         {% include sharing.html %}
 
