Fix frontpage goals copy

--- a/web/index.html
+++ b/web/index.html
@@ -141,38 +141,38 @@ title: El indultometro
       <ul class="thumbnails bordered pull-center">
         <li class="span3">
           <h3>
-            <i class="icon-beaker huge-icon"></i>
+            <i class="icon-search huge-icon"></i>
             <span class="blocked">Transparencia</span>
           </h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            Creemos en una sociedad informada como base para una ciudadanía activa.
           </p>
         </li>
         <li class="span3">
           <h3>
-            <i class="icon-bullhorn huge-icon"></i>
+            <i class="icon-comments huge-icon"></i>
             <span class="blocked">Rendición de cuentas</span>
           </h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            La información pública obliga a los gobernantes a responder ante sus actos.
           </p>
         </li>
         <li class="span3">
           <h3>
-            <i class="icon-signal huge-icon"></i>
+            <i class="icon-check huge-icon"></i>
             <span class="blocked">Fact-checking</span>
           </h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            Queremos establecer una base de datos rigurosa para análisis o investigaciones.
           </p>
         </li>
         <li class="span3">
           <h3>
-            <i class="icon-magnet huge-icon"></i>
-            <span class="blocked">Separación de poderes</span>
+            <i class="icon-group huge-icon"></i>
+            <span class="blocked">Tres poderes</span>
           </h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
+            Pensamos que esta incursión del poder ejecutivo en la tarea del judicial debe ser vigilada.
           </p>
         </li>
       </ul>
