Minor copy edits suggested by Jacobo

--- a/web/index.html
+++ b/web/index.html
@@ -154,7 +154,7 @@ title: El indultometro
             <span class="blocked">Rendición de cuentas</span>
           </h3>
           <p>
-            La información pública obliga a los gobernantes a responder ante sus actos.
+            La información pública contextualizada incentiva a legisladores y gobernantes a responder de sus decisiones.
           </p>
         </li>
         <li class="span3">
