--- a/web/famosos.html
+++ b/web/famosos.html
@@ -16,10 +16,29 @@ nav_section: main_pardons
 </section>
 <div class="section">
   <div class="container">
-    <!--<div class="row-fluid">-->
-      <iframe src='http://embed.verite.co/timeline/?source=0Ar3KSfz0LI8kdENqV1lLMzRlS3pUaW5sZWM2VDJ0Umc&maptype=TERRAIN&lang=es&hash_bookmark=true&height=650' width='100%' height='670' frameborder='1'></iframe>
-    <!--</div>-->
+    <div class="row-fluid">
+      <div id="timeline"></div>
+    </div>
   </div>
 </div>
 </div>
+<script type="text/javascript">
+        var timeline_config = {
+            width:              '100%',
+            height:             '650',
+            source:             'https://docs.google.com/spreadsheet/pub?key=0Ar3KSfz0LI8kdENqV1lLMzRlS3pUaW5sZWM2VDJ0Umc&output=html',
+            embed_id:           'timeline',                     //OPTIONAL USE A DIFFERENT DIV ID FOR EMBED
+            start_at_end:       false,                          //OPTIONAL START AT LATEST DATE
+            start_at_slide:     '0',                            //OPTIONAL START AT SPECIFIC SLIDE
+            start_zoom_adjust:  '0',                            //OPTIONAL TWEAK THE DEFAULT ZOOM LEVEL
+            hash_bookmark:      true,                           //OPTIONAL LOCATION BAR HASHES
+            font:               'TL-OpenSans',                  //OPTIONAL FONT
+            debug:              true,                           //OPTIONAL DEBUG TO CONSOLE
+            lang:               'es',                           //OPTIONAL LANGUAGE
+            maptype:            'TERRAIN',                      //OPTIONAL MAP STYLE
+            css:                'stylesheets/timeline.css',     //OPTIONAL PATH TO CSS
+            js:                 'javascripts/timeline-min.js'   //OPTIONAL PATH TO JS
+        }
+</script>
+<script type="text/javascript" src="javascripts/storyjs-embed.js"></script>
 {% include footer.html %}
