--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@ title: El indultometro
       <li class="span4">
         <a href="famosos.html">
           <figure class="thumbnail-figure">
-            <img alt="" src="images/assets/people6-600x400.jpeg" />
+            <img alt="" src="images/assets/timeline.jpg" />
             <figcaption class="thumbnail-title">
               <h3>
                 <span>Los más destacados</span>
