Added sharing funcionality to famous pardons

--- a/web/famosos.html
+++ b/web/famosos.html
@@ -17,6 +17,7 @@ nav_section: main_pardons
 <div class="section">
   <div class="container">
     <div class="row-fluid">
+      {% include sharing.html %}
       <div id="timeline"></div>
     </div>
   </div>
