--- a/web/indulto.html
+++ b/web/indulto.html
@@ -1,6 +1,5 @@
 ---
-title: Detalle de un indulto
-subtitle: This is the lead
+title: El indultómetro
 nav_section: all_pardons
 ---
 
@@ -16,18 +15,25 @@ nav_section: all_pardons
 </section>
 <section class="section">
   <div class="container">
+    <h4>
+      &larr; <a href="/indultos.html">Volver a la lista de indultos</a>
+    </h4>
     <div class="row-fluid">
       <div class="span12">
         <article class="blog-post">
           <div class="row-fluid">
             <div class="span10 offset1">
-              {% include sharing.html %}
+              <p>&nbsp;</p>
               <small>
                 <table class="table table-bordered table-striped" id="indultos">
                   <tbody>
                   </tbody>
                 </table>
               </small>
+              <p>
+                Fuente: <a href="" id="boe-link" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>
+              </p>
+              {% include sharing.html %}
             </div>
           </div>
           <div class="row-fluid">
@@ -44,8 +50,9 @@ nav_section: all_pardons
 <script> 
   $(function() {
     var id = URI.parseQuery(window.location.search)['id'];
-    $("#h1_pardon").html('Indulto: <a target="_blank" href="http://www.boe.es/diario_boe/txt.php?id='+
-    id+'">'+id+'</td></tr>')
+    var boeURL = 'http://www.boe.es/diario_boe/txt.php?id='+id;
+    $("#h1_pardon").html('Indulto <a target="_blank" href="'+boeURL+'">'+id+'</td></tr>')
+    $("#boe-link").attr('href', boeURL);
     function renderResults(data) {
       $('#indultos tbody').empty();
       var fragments = [];
@@ -68,11 +75,8 @@ nav_section: all_pardons
 
     var id = URI.parseQuery(window.location.search)['id'];
     $.ajax({
-      url: '/api/pardons/'+encodeURIComponent(id)+'?callback=?',  // FIXME
-      dataType: "jsonp",
-      jsonpCallback: "onLoad",
-      cache: false  // FIXME: development
-    }).success(renderResults);      
+      url: '/api/pardons/'+encodeURIComponent(id),
+    }).success(renderResults);
   });
 </script>
 
