--- a/web/index.html
+++ b/web/index.html
@@ -127,6 +127,7 @@ title: El indultometro
         </p>
       </li>
     </ul>
+    {% include sharing.html %}
   </div>
 </section>
 <section class="section alt">
