--- a/web/indultos.html
+++ b/web/indultos.html
@@ -31,7 +31,9 @@ nav_section: all_pardons
               <div class="control-group">
                 <label class="control-label" for="search-form-query">Texto libre</label>
                 <div class="controls">
-                  <input name="q" class="input-xlarge" id="search-form-query" type="text" id="search-form-query" />
+                  <input name="q" class="input-xlarge" id="search-form-query" type="text" id="search-form-query">
+                    <span class="help-inline">No incluye el nombre del indultado. <a href="/ayuda.html#LOPD">¿Por qué?</a></span>
+                  </input>
                 </div>
               </div>
               <div class="control-group">
